force-app/main/default/objects/Insurance_Binder__c/Insurance_Binder__c.object-meta.xml
<CustomObject>
    <!--
      THIS COMMENT IS INSIDE THE ROOT ELEMENT ON PURPOSE - a comment ABOVE the root breaks sf at
      source conversion with a misleading "unable to find matching parent xml" error.

      NAME IS Insurance_Binder__c, NOT Insurance_Policy__c. Insurance_Policy__c already exists in
      this org as a READ-ONLY Yardi mirror hanging off Property_Asset__c on the Property Management
      side. It must not be touched, extended or reused for acquisition work. Binder is also the
      correct CRE term for what this object holds - the pre-closing binding of coverage - so the two
      objects are distinguishable at a glance in a report, a lookup dialog or a selector.

      LOOKUP TO Transaction__c, required=false, deleteConstraint=SetNull. Identical reasoning to
      Loan__c: conditional existence, and required=true would force deleteConstraint=Restrict and
      make every Transaction carrying a binder permanently undeletable, reproducing the
      Critical_Date__c defect on a second object.

      Is_Bound__c is a FORMULA over Bound_Date__c, so the flag cannot drift from the date it claims
      to summarise. It must be granted editable=false in every permission set - editable=true on a
      formula field FAILS THE DEPLOY.
    -->
    <description>Pre-closing insurance binder for a Transaction - carrier, policy number, coverage amount, binding deadline and bound date. Transaction-side only. The Property Management object Insurance_Policy__c is a separate read-only Yardi mirror and is unrelated to this. Backs checklist group G and feeds the Insurance Binding critical date.</description>
    <label>Insurance Binder</label>
    <nameField>
        <displayFormat>INSB-{0000}</displayFormat>
        <label>Insurance Binder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Binders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>