force-app/main/default/objects/Insurance_Binder__c/fields/Bound_Date__c.field-meta.xml
<CustomField>
    <fullName>Bound_Date__c</fullName>
    <description>Date coverage was actually bound. Blank until it is. This is the single source of truth for whether the binder is in force - Is_Bound__c is derived from it rather than stored separately, so the two can never disagree.</description>
    <inlineHelpText>Date the carrier actually bound coverage. Leave blank until confirmed.</inlineHelpText>
    <label>Bound Date</label>
    <type>Date</type>
</CustomField>