force-app/main/default/objects/Insurance_Binder__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <description>Name of the insurance carrier, as free text. Named _Name__c and not Carrier__c for the same reason as Lender_Name__c: the naming convention reserves an object-shaped name for a lookup, and no Carrier__c object exists.</description>
    <inlineHelpText>Name of the insurance company issuing the binder.</inlineHelpText>
    <label>Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>