force-app/main/default/objects/Insurance_Binder__c/fields/Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Amount__c</fullName>
    <description>Total coverage the binder provides. Suffixed Amount because the naming convention requires a currency field to make its unit unambiguous.</description>
    <inlineHelpText>Total insured amount under this binder.</inlineHelpText>
    <label>Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>