force-app/main/default/objects/Insurance_Binder__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Carrier policy or binder reference. Text, not Number - policy references contain letters and leading zeros that a numeric type would destroy.</description>
    <inlineHelpText>Policy or binder reference number as printed by the carrier.</inlineHelpText>
    <label>Policy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>